# pastedis

./: .flake8  .gitignore  manage.py  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  tests.py
accounts/migrations/: 0001_initial.py
pastedis/: asgi.py  settings.py  urls.py  wsgi.py
snippets/: forms.py  models.py  views.py
snippets/migrations/: 0001_initial.py
templates/: base.html  home.html
