[project]
name = "pastedis"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Christos Gkoutzigiannis", email = "cgkoutzigiannis@gmail.com"},
]
dependencies = [
    "Django==5.1.1",
    "django-environ==0.11.2",
    "black>=24.8.0",
    "isort>=5.13.2",
    "flake8>=7.1.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.black]
line-length = 88
exclude = "(.venv*|static*|staticfiles*)"

[tool.isort]
profile = "black"
skip = ["static", ".venv", "staticfiles/"]
line_length = 88

[tool.pdm.scripts]
lint = "flake8 ."
format = "black ."
sort = "isort ."
all = {composite = ["format", "sort", "lint"]}

